--- a/index.html
+++ b/index.html
@@ -18,10 +18,10 @@
         <div class="row row-01">
           <nav class="nav-desk">
             <ul>
-              <li><a href="#">Quem somos</a></li>
-              <li><a href="#">Equipe</a></li>
-              <li><a href="#">Espaço</a></li>
-              <li><a href="#">Contato</a></li>
+              <li><a href="#quem-somos">Quem somos</a></li>
+              <li><a href="#equipe">Equipe</a></li>
+              <li><a href="#espaco">Espaço</a></li>
+              <li><a href="#contato">Contato</a></li>
             </ul>
             <div class="search-group">
               <div class="search"></div>
@@ -43,10 +43,10 @@
             <div class="open-menu disabled">
                 <div id="menu-mobile" class="visible-xs">
                     <ul>
-                      <li><a href="#">Quem somos</a></li>
-                      <li><a href="#">Equipe</a></li>
-                      <li><a href="#">Espaço</a></li>
-                      <li><a href="#">Contato</a></li>
+                      <li><a href="#quem-somos">Quem somos</a></li>
+                      <li><a href="#equipe">Equipe</a></li>
+                      <li><a href="#espaco">Espaço</a></li>
+                      <li><a href="#contato">Contato</a></li>
                     </ul>
                     <div class="bar-close">
                         <button class="btn btn-close"></button>
@@ -102,7 +102,7 @@
     </section>
     <section class="section-02">
       <div class="container container-01">
-        <div class="row row-01">
+        <div class="row row-01" id="quem-somos">
           <div class="col-lg-6 col-01">
             <img src="assets/images/image-01.jpg">
           </div>
@@ -122,7 +122,7 @@
             </div>
           </div>
         </div>
-        <div class="row row-02">
+        <div class="row row-02" id="equipe">
           <div class="col-lg-5 col-01">
             <div class="content">
               <h3>Nossa equipe</h3>
@@ -141,11 +141,11 @@
         </div>
       </div>
     </section>
-    <section class="section-03">
+    <section class="section-03" id="espaco">
       <div class="container-fluid">
         <div class="fluid-01">
           <div class="container container-01">
-            <div class="row row-01">
+            <div class="row row-01" >
               <div class="col-lg-4 col-01">
                 <div class="content">
                   <h3>Nosso espaço</h3>
@@ -206,7 +206,7 @@
         </div>
       </div>
     </section>
-    <section class="section-04">
+    <section class="section-04" id="contato">
       <div class="container container-01">
         <div class="row row-01">
           <div class="col-lg-4 offset-lg-4 col-01">
@@ -266,15 +266,15 @@
       <row class="row row-01">
         <div class="col-lg-12 col-01">
           <nav>
-            <a href="">Quem somos</a>
-            <a href="">Especialidades</a>
-            <a href="">Blog</a>
-            <a href="">Contato</a>
+            <a href="#quem-somos">Quem somos</a>
+            <a href="#">Especialidades</a>
+            <a href="#">Blog</a>
+            <a href="#contato">Contato</a>
           </nav>
           <div class="content">
-            <a href=""><img src="assets/images/linkedin.svg"></a>
-            <a href=""><img src="assets/images/facebook.svg"></a>
-            <a href=""><img src="assets/images/instagram.svg"></a>
+            <a href="#"><img src="assets/images/linkedin.svg"></a>
+            <a href="#"><img src="assets/images/facebook.svg"></a>
+            <a href="#"><img src="assets/images/instagram.svg"></a>
           </div>
           <hr>
           <p>Health Clinic São Paulo -Todos os Direitos Reservados.</p>
